HTTPS First in PBM breaks http://docs.imsidesign.com/
Categories
(Core :: DOM: Security, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox98 | --- | fixed |
People
(Reporter: jscher2000, Assigned: t.yavor)
References
(Blocks 1 open bug)
Details
(Whiteboard: [domsecurity-active])
Attachments
(1 file)
User Agent: Mozilla/5.0 (Windows NT 10.0; Win64; x64; rv:95.0) Gecko/20100101 Firefox/95.0
Steps to reproduce:
Navigate to http://docs.imsidesign.com/projects/TurboCAD-2021/turbocad-2021-user-guide-publication/Customized-Programming/Parametric-Part-Script-Editing/ in a regular window and a private window.
Actual results:
Regular window: page loaded fine.
Private window: HTTPS First redirected and server (Cloudflare) returned 521 error.
Expected results:
Since HTTPS First doesn't allow user exceptions, could it handle this kind of error as a potential connection issue?
More generally, HTTPS First is an underdocumented feature that is difficult to troubleshoot on SUMO. https://support.mozilla.org/questions/1362289
| Reporter | ||
Updated•4 years ago
|
This seems closely related to bug 1729618, possibly a duplicate. See the issues reported there and the comments.
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Updated•4 years ago
|
| Assignee | ||
Comment 2•4 years ago
•
|
||
I can reproduce the bug. It occurs since https-first (till now) only consider to downgrade requests with a response error status between 400 - 511 (https://searchfox.org/mozilla-central/source/dom/security/nsHTTPSOnlyUtils.cpp#474-475).
That should probably adjust to 400 - 525.
Updated•4 years ago
|
| Assignee | ||
Comment 3•4 years ago
|
||
Comment 4•4 years ago
|
||
The severity field is not set for this bug.
:ckerschb, could you have a look please?
For more information, please visit auto_nag documentation.
Updated•4 years ago
|
Comment 6•4 years ago
|
||
| bugherder | ||
Description
•