Bug 1747673 - HTTPS First fallback to http for non-standard 5xx status code responses. r=ckerschb,kershaw

Differential Revision: https://phabricator.services.mozilla.com/D135214