dom/security/nsHTTPSOnlyUtils.cpp
@@ -472,7 +472,7 @@ nsHTTPSOnlyUtils::PotentiallyDowngradeHttpsFirstRequest(nsIChannel* aChannel,
     // corresponding NS_ERROR_*.
     // To do so we convert the response status to  an nsresult error
     // Every NS_OK that is NOT an 4xx or 5xx error code won't get downgraded.
-    if (responseStatus >= 400 && responseStatus < 512) {
+    if (responseStatus >= 400 && responseStatus < 600) {
       // HttpProxyResponseToErrorCode() maps 400 and 404 on
       // the same error as a 500 status which would lead to no downgrade
       // later on. For that reason we explicit filter for 400 and 404 status
